Adiciona Métodos de Autenticação
Adiciona Métodos de autenticação no Portal.

--- a/Portal/Components/Routes.razor
+++ b/Portal/Components/Routes.razor
@@ -1,6 +1,14 @@
-﻿<Router AppAssembly="typeof(Program).Assembly">
+﻿@using Portal.Components.Layout
+<Router AppAssembly="typeof(Program).Assembly">
     <Found Context="routeData">
-        <RouteView RouteData="routeData" DefaultLayout="typeof(Layout.MainLayout)" />
+        <AuthorizeRouteView RouteData="routeData" DefaultLayout="typeof(Layout.MainLayout)">
+            <text>Aguarde a autorização</text>
+        </AuthorizeRouteView>
         <FocusOnNavigate RouteData="routeData" Selector="h1" />
     </Found>
+    <NotFound>
+        <LayoutView Layout="@typeof(MainLayout)">
+            <p role="alert">Desculpe, não há nada neste endereço</p>
+        </LayoutView>
+    </NotFound>
 </Router>
