--- a/Portal/Components/_Imports.razor
+++ b/Portal/Components/_Imports.razor
@@ -10,3 +10,5 @@
 @using Microsoft.JSInterop
 @using Portal
 @using Portal.Components
+@using Portal.Authentication
+@using Portal.Authentication.Models
