--- a/Portal/Components/App.razor
+++ b/Portal/Components/App.razor
@@ -14,7 +14,8 @@
 </head>
 
 <body>
-    <Routes />
+    <Routes @rendermode="new InteractiveServerRenderMode(prerender: false)" />
+        
     <script src="_framework/blazor.web.js"></script>
 </body>
 
