--- a/Portal/Components/Routes.razor
+++ b/Portal/Components/Routes.razor
@@ -1,14 +1,21 @@
 ﻿@using Portal.Components.Layout
 <Router AppAssembly="typeof(Program).Assembly">
     <Found Context="routeData">
-        <AuthorizeRouteView RouteData="routeData" DefaultLayout="typeof(Layout.MainLayout)">
-            <text>Aguarde a autorização</text>
+        <AuthorizeRouteView RouteData="routeData" DefaultLayout="@typeof(MainLayout)">
+            <Authorizing>
+                <text>
+                    Autorizando...
+                </text>
+            </Authorizing>
         </AuthorizeRouteView>
+            
+            
+            
         <FocusOnNavigate RouteData="routeData" Selector="h1" />
     </Found>
     <NotFound>
         <LayoutView Layout="@typeof(MainLayout)">
-            <p role="alert">Desculpe, não há nada neste endereço</p>
+            <p> Desculpe, não há nada neste endereço</p>
         </LayoutView>
     </NotFound>
 </Router>
