--- a/Portal/Components/Component.razor
+++ b/Portal/Components/Component.razor
@@ -1,4 +1,4 @@
-﻿@using System.Net.Http
+@using System.Net.Http
 @using System.Net.Http.Json
 @using Microsoft.AspNetCore.Authorization
 @using Microsoft.AspNetCore.Components.Authorization
@@ -13,4 +13,6 @@
 @using Portal.Authentication
 @using Portal.Authentication.Models
 @using Portal.Components.Pages
-<Component />
+@using CCSMDataManager.Models
+@using CCSMDataManager.Entities
+
