--- a/Portal/Components/Layout/MainLayout.razor
+++ b/Portal/Components/Layout/MainLayout.razor
@@ -1,4 +1,5 @@
-﻿@inherits LayoutComponentBase
+﻿@using System.Security.Claims
+@inherits LayoutComponentBase
 
 <div class="page">
     <div class="sidebar">
@@ -7,7 +8,17 @@
 
     <main>
         <div class="top-row px-4">
-            <a href="https://learn.microsoft.com/aspnet/core/" target="_blank">About</a>
+            <AuthorizeView>
+                <Authorized>
+                    Bem-vindo, @context.User.FindFirst(ClaimTypes.Name).Value
+                    <NavLink class="nav-link" href="/logout">
+                        <span class="oi oi-account-logout"></span> Sair
+                    </NavLink>
+                </Authorized>
+                <NotAuthorized>                    
+                    <LogIn />
+                </NotAuthorized>
+            </AuthorizeView>
         </div>
 
         <article class="content px-4">
