--- a/Portal/Components/Pages/LogIn.razor
+++ b/Portal/Components/Pages/LogIn.razor
@@ -1,39 +1,24 @@
-﻿@page "/login"
-@inject IAuthenticationService AuthService
+﻿@inject IAuthenticationService AuthService
 @inject NavigationManager NavManager
 
+<EditForm Model="model" OnValidSubmit="ExecuteLogIn" class="">
 
-<h3>Log In</h3>
 
-@if (showAuthenticationError)
-{
-    <div class="alert alert-danger" role="alert">
-        <p>@authenticationErrorText</p>
-    </div>   
-}
-
-<EditForm Model="model" OnValidSubmit="ExecuteLogIn" class="card card-body bg-light mt-5">
-    <DataAnnotationsValidator/>
-    <ValidationSummary />
-    <div class="form-group row">
-        <label for="email" class="col-md-2 col-form-label">Email</label>
-        <div class="col-md-10">
-            <InputText id="email" class="form-control" @bind-Value="model.Email" />
-            <ValidationMessage For="@(() => model.Email)" />
-        </div>
-    </div>
-    <div class="form-group row">
-        <label for="password" class="col-md-2 col-form-label">Senha</label>
-        <div class="col-md-10">
-            <InputText id="password" type="password" class="form-control" @bind-Value="model.Password" />
-            <ValidationMessage For="@(() => model.Password)" />
-        </div>
-    </div>
     <div class="row">
-        <div class="col col-md-12 text-right">
-            <button type="submit" class="btn btn-success">Entrar</button>
+        <div class="col-auto">            
+            <InputText id="email" class="form-control" @bind-Value="model.Email" placeholder="Email Adress" />
+         </div>
+
+         <div class="col-auto">            
+            <InputText id="password" type="password" class="form-control" @bind-Value="model.Password" placeholder="Senha" />
+        </div>
+
+        <div class="col-auto">
+            <button type="submit" class="btn btn-primary mb-2">Entrar</button>
         </div>
     </div>
+    
+    
 
 </EditForm>
 
