--- a/Portal/Components/Pages/LogIn.razor
+++ b/Portal/Components/Pages/LogIn.razor
@@ -36,7 +36,7 @@
 
         if(result is not null)
         {
-            NavManager.NavigateTo("/");   
+            NavManager.NavigateTo("/relatorios");   
         }
 
         else
