Adiciona a View para Registro de Usuarios

--- a/Portal/Components/Layout/MainLayout.razor
+++ b/Portal/Components/Layout/MainLayout.razor
@@ -16,6 +16,10 @@
                     </NavLink>
                 </Authorized>
                 <NotAuthorized>                    
+                    <NavLink class ="nav-link" href="register">
+                        <span class="oi oi-account-register"></span>Cadastre-se &nbsp &nbsp &nbsp
+                    </NavLink>
+                        
                     <LogIn />
                 </NotAuthorized>
             </AuthorizeView>
