--- a/Portal/Components/Pages/ImprimirRelatorio.razor
+++ b/Portal/Components/Pages/ImprimirRelatorio.razor
@@ -1,4 +1,4 @@
-﻿@page "/imprimirelatorio"
+﻿@* @page "/imprimirelatorio"
 @using Portal.Relatorios
 @model Portal.Relatorios.RelatoriosModel
 
@@ -86,3 +86,4 @@ else
 @code {
 
 }
+ *@
