--- a/Portal/Components/Pages/ImprimirRelatorio.razor
+++ b/Portal/Components/Pages/ImprimirRelatorio.razor
@@ -1,6 +1,6 @@
-﻿@* @page "/imprimirelatorio"
+﻿@page "/ImprimirRelatorio"
 @using Portal.Relatorios
-@model Portal.Relatorios.RelatoriosModel
+
 
 
 
@@ -35,55 +35,7 @@
 </form>
 
 <hr />
-@if (Model.Relatorios.Any())
-{
-    <div class="table-responsive">
-        <table class="table table-striped table-hover">
-            <thead>
-                <tr>
-                    <th>Turma</th>
-                    <th>Data</th>
-                    <th>Horário</th>
-                    <th>Disciplina</th>
-                    <th>Turno</th>
-                    <th>Comentário</th>
-                    <th>Barulho</th>
-                </tr>
-            </thead>
-            <tbody>
-                @foreach (var relatorio in Model.Relatorios)
-                {
-                    <tr>
-                        <td>@relatorio.Turma</td>
-                        <td>@relatorio.Data.ToShortDateString()</td>
-                        <td>@relatorio.HorarioAula</td>
-                        <td>@relatorio.Disciplina</td>
-                        <td>@relatorio.Turno</td>
-                        <td>@relatorio.Comentario</td>
-                        <td>
-                            @if (relatorio.Barulho)
-                            {
-                                <span class="badge bg-danger">Sim</span>
-                            }
-                            else
-                            {
-                                <span class="badge bg-success">Não</span>
-                            }
-                        </td>
-                    </tr>
-                }
-            </tbody>
-        </table>
-    </div>
-}
-else
-{
-    <div class="alert alert-info" role="alert">
-        Nenhum relatório encontrado com os filtros selecionados.
-    </div>
-}
 
 @code {
 
 }
- *@
